--- a/_config.yml
+++ b/_config.yml
@@ -92,6 +92,7 @@ author:
   uri              :
   bitbucket        :
   codepen          :
+  kaggle           : "astrogqzhang"
   dribbble         :
   flickr           :
   facebook         :
